Made user sessions logging out and viewing pages through user roles

--- a/public/application.html
+++ b/public/application.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="user-info-bar" class="user-info-bar" style="display:none"></div>
     <div class="header">
         <h1>Πρόγραμμα Erasmus+</h1>
         <p>Αίτηση Συμμετοχής</p>
@@ -265,5 +266,8 @@
     <div class="footer">
         <p>&copy; 2025 Πρόγραμμα Erasmus+ | Όλα τα δικαιώματα διατηρούνται</p>
     </div>
+
+    <script src="scripts/application.js"></script>
+    <script src="scripts/userinfo.js"></script>
 </body>
 </html>
