--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="user-info-bar" class="user-info-bar" style="display:none"></div>
     <div class="header">
         <h1>Πρόγραμμα Erasmus+</h1>
         <p>Ανακαλύψτε τις ευκαιρίες σπουδών στο εξωτερικό</p>
@@ -88,5 +89,6 @@
     <div class="footer">
         <p>&copy; 2025 Πρόγραμμα Erasmus+ | Πανεπιστήμιο Πελοποννήσου UOP</p>
     </div>
+    <script src="scripts/userinfo.js"></script>
 </body>
 </html>
