--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="user-info-bar" class="user-info-bar" style="display:none"></div>
     <div class="header">
         <h1>Πρόγραμμα Erasmus+</h1>
         <p>Εγγραφή</p>
@@ -105,5 +106,6 @@
     </div>
 
     <script src="scripts/signup.js"></script>
+    <script src="scripts/userinfo.js"></script>
 </body>
 </html>
