--- a/public/reqs.html
+++ b/public/reqs.html
@@ -166,5 +166,6 @@
         <p>&copy; 2025 Πρόγραμμα Erasmus+ | Όλα τα δικαιώματα διατηρούνται</p>
     </div>
     <script src="scripts/userinfo.js"></script>
+    <script src="scripts/reqs.js"></script>
 </body>
 </html>
