--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,12 @@
         <p>Ανακαλύψτε τις ευκαιρίες σπουδών στο εξωτερικό</p>
     </div>
     
-    <nav class = "">
-        <a href="index.html">ΑΡΧΙΚΗ</a>                                    
-        <a href="more.html">ΠΕΡΙΣΣΟΤΕΡΑ</a>                                                 
+    <nav>
+        <a href="index.html">ΑΡΧΙΚΗ</a>
+        <a href="more.html">ΠΕΡΙΣΣΟΤΕΡΑ</a>
         <a href="reqs.html">ΕΛΑΧΙΣΤΕΣ ΑΠΑΙΤΗΣΕΙΣ</a>
         <a href="application.html">ΑΙΤΗΣΗ</a>
+        <a href="results.html">ΑΠΟΤΕΛΕΣΜΑΤΑ</a>
         <a href="sign-up.html">ΕΓΓΡΑΦΗ</a>
         <a href="login.html">ΕΙΣΟΔΟΣ</a>
     </nav>
