--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -18,6 +18,7 @@
         <a href="more.html">ΠΕΡΙΣΣΟΤΕΡΑ</a>
         <a href="reqs.html">ΕΛΑΧΙΣΤΕΣ ΑΠΑΙΤΗΣΕΙΣ</a>
         <a href="application.html">ΑΙΤΗΣΗ</a>
+        <a href="results.html">ΑΠΟΤΕΛΕΣΜΑΤΑ</a>
         <a href="sign-up.html">ΕΓΓΡΑΦΗ</a>
         <a href="login.html">ΕΙΣΟΔΟΣ</a>
     </nav>
