Handled invalid login inputs and api responses to them

--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -30,7 +30,7 @@
                     <h2 class="signup-title">Εγγραφή Νέου Φοιτητή</h2>
                     <p class="signup-description">Συμπληρώστε τα παρακάτω στοιχεία για να δημιουργήσετε λογαριασμό και να αποκτήσετε πρόσβαση σε όλες τις δυνατότητες της πλατφόρμας.</p>
                     
-                    <form action="/auth/signup" method="post" id="signup-form" onsubmit="handleSignup(event);">
+                    <form method="post" id="signup-form" onsubmit="handleSignup(event);">
                         <div class="row">
                             <div class="col-s-12 col-m-6 col-l-6">
                                 <div class="form-group">
