Added redirection of admin to admin env,added some application routes for the form,fixed application periods to function properly

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UOP-Erasmus</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div id="user-info-bar" class="user-info-bar" style="display:none"></div>
@@ -91,5 +92,6 @@
         <p>&copy; 2025 Πρόγραμμα Erasmus+ | Πανεπιστήμιο Πελοποννήσου UOP</p>
     </div>
     <script src="scripts/userinfo.js"></script>
+    <script src="scripts/adminReturn.js"></script>
 </body>
 </html>
