--- a/public/results.html
+++ b/public/results.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erasmus - Αποτελέσματα</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div id="user-info-bar" class="user-info-bar" style="display:none"></div>
@@ -41,5 +42,6 @@
 
     <script src="scripts/userinfo.js"></script>
     <script src="scripts/results.js"></script>
+    <script src="scripts/adminReturn.js"></script>
 </body>
 </html>
