--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -20,6 +20,7 @@
         <a href="reqs.html">ΕΛΑΧΙΣΤΕΣ ΑΠΑΙΤΗΣΕΙΣ</a>
         <a href="application.html">ΑΙΤΗΣΗ</a>
         <a href="results.html">ΑΠΟΤΕΛΕΣΜΑΤΑ</a>
+        <a href="profile.html">ΠΡΟΦΙΛ</a>
         <a href="sign-up.html">ΕΓΓΡΑΦΗ</a>
         <a href="login.html">ΕΙΣΟΔΟΣ</a>
     </nav>
